# ShigosagDB

./: CMakeLists.txt  README.md
include/core/: Database.hpp  Record.hpp  StorageEngine.hpp  Table.hpp
include/index/: BPlusTree.hpp
include/parser/: AST.hpp  Parser.hpp  Tokenizer.hpp
include/transaction/: TransactionManager.cpp  TransactionManager.hpp
include/utils/: Colors.hpp  Logger.hpp
src/: main.cpp
src/core/: Database.cpp  StorageEngine.cpp  Table.cpp
src/index/: BPlusTree.cpp
src/parser/: Parser.cpp  Tokenizer.cpp
src/utils/: Logger.cpp
tests/: database_tests.cpp
